--- a/requirements.txt
+++ b/requirements.txt
@@ -34,6 +34,7 @@ python-saharaclient>=0.10.0
 python-troveclient>=1.2.0
 python-zaqarclient>=0.1.1
 python-swiftclient>=2.2.0
+python-group-based-policy-client>=0.9.0
 python-subunit>=0.0.18
 requests>=2.5.2
 SQLAlchemy<1.1.0,>=0.9.7
